--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 ]
 requires-python = ">=3.8,<3.11"
 dependencies = [
-    "openai-whisper@git+https://github.com/openai/whisper#egg=76c901a",
+    "openai-whisper ==20230314",
     "deepl >=1.14.0",
     "Click >=8.1.3",
 ]
