--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,19 +5,22 @@ on:
     tags:
       - "v*"
 
+env:
+  MIN_SUPPORTED_PYTHON: "3.8"
+  PYTHON_DEPENDENCIES: "pip build"
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4.1.1
+      - name: Set up Python ${{ env.MIN_SUPPORTED_PYTHON }}
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
+          python-version: ${{ env.MIN_SUPPORTED_PYTHON }}
           cache: pip
-          cache-dependency-path: "**/pyproject.toml"
       - name: Install dependencies
-        run: python -m pip install --upgrade pip build
+        run: python -m pip install --upgrade $PYTHON_DEPENDENCIES
       - name: 📦 Build package
         run: python -m build --sdist --wheel --outdir dist/
       - name: 🚀 Publish package on PyPi
@@ -30,7 +33,7 @@ jobs:
           find . -name '*.whl' -exec sh -c 'sha256sum "$0" > "${0%}.sha256"' {} \;
           cd ..
       - name: 📝 Create GitHub release
-        uses: ncipollo/release-action@v1
+        uses: ncipollo/release-action@v1.13.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
