--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ Documentation = "https://github.com/LuqueDaniel/whisper2subs/blob/main/README.md
 
 [project.optional-dependencies]
 dev = [
-    "pre-commit >=3.6.0",
+    "pre-commit ==3.5.0",
     "black >=23.12.1",
     "isort >=5.13.2",
     "ruff >=0.1.9",
