Excludes ./build from mypy check

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ select = ["F", "E", "W", "C", "B", "N"]
 [tool.mypy]
 strict = true
 ignore_missing_imports = true
+exclude = ["./build"]
 
 [[tool.mypy.overrides]]
 module = ["deepl"]
