--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   MIN_SUPPORTED_PYTHON: "3.8"
-  PYTHON_DEPENDENCIES: "pip build"
+  PYTHON_DEPENDENCIES: "build"
 
 jobs:
   publish:
@@ -20,7 +20,7 @@ jobs:
           python-version: ${{ env.MIN_SUPPORTED_PYTHON }}
           cache: pip
       - name: Install dependencies
-        run: python -m pip install --upgrade $PYTHON_DEPENDENCIES
+        run: python -m pip install $PYTHON_DEPENDENCIES
       - name: 📦 Build package
         run: python -m build --sdist --wheel --outdir dist/
       - name: 🚀 Publish package on PyPi
