--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   MIN_SUPPORTED_PYTHON: "3.8"
+  PYTHON_DEPENDENCIES: ".[dev]"
 
 jobs:
   lint:
@@ -20,7 +21,7 @@ jobs:
           python-version: ${{ env.MIN_SUPPORTED_PYTHON }}
           cache: pip
       - name: Install dependencies
-        run: python -m pip install ruff mypy
+        run: python -m pip install $PYTHON_DEPENDENCIES
       - name: Lint (ruff)
         run: ruff check --output-format github .
       - name: Lint (mypy)
@@ -36,7 +37,7 @@ jobs:
           python-version: ${{ env.MIN_SUPPORTED_PYTHON }}
           cache: pip
       - name: Install dependencies
-        run: python -m pip install black isort
+        run: python -m pip install $PYTHON_DEPENDENCIES
       - name: Format (black)
         run: python -m black --check --diff .
       - name: Format (isort)
